objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Draft_Init_Res_Days_Count__c</fullName>
        <label>Draft Init. Res Days Count</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Draft_Subs_Res_Days_Count__c</fullName>
        <label>Draft Subs Res Days Count</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duplicate_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplicate Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Early_Termination_Right__c</fullName>
        <label>Early Termination Right</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>For Convenience (with cancellation fee)</fullName>
                </value>
                <value>
                    <fullName>For Convenience (Future Yrs Only)</fullName>
                </value>
                <value>
                    <fullName>For Convenience (no cancellation fee)</fullName>
                </value>
                <value>
                    <fullName>Upon occurrence of special circumstances</fullName>
                </value>
                <value>
                    <fullName>Upon change of control</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Early_Termination_Rights__c</fullName>
        <label>Early Termination Right</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>For Convenience (with cancellation fee)</fullName>
                </value>
                <value>
                    <fullName>For Convenience (no cancellation fee)</fullName>
                </value>
                <value>
                    <fullName>Upon occurrence of special circumstances</fullName>
                </value>
                <value>
                    <fullName>Upon change of control</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Early_Termination_Score__c</fullName>
        <formula>IF(AND(
INCLUDES(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Early_Termination_Rights__c, "None"),
SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Opt_Out__c=FALSE),4*0.17, 
IF(AND(
INCLUDES(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Early_Termination_Rights__c, "None"),
SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Opt_Out__c=TRUE),1*0.17, 
IF(AND
(NOT(INCLUDES(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Early_Termination_Rights__c, "None")),
SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Opt_Out__c=FALSE), 
(
IF(INCLUDES(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Early_Termination_Rights__c, "For Convenience (no cancellation fee)"),1*0.17, 
IF(INCLUDES(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Early_Termination_Rights__c, "Upon change of control"),1*0.17, 
IF(INCLUDES(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Early_Termination_Rights__c, "For Convenience (with cancellation fee)"),2*0.17, 
IF(INCLUDES(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Early_Termination_Rights__c, "Upon occurance of special circumstance"),3*0.17, 
IF(INCLUDES(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Early_Termination_Rights__c, "None"),4*0.17, 0

)))))),0
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Early Termination Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <formula>SBQQ__Opportunity__r.Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extended_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Extended By</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contracts (Extended By)</relationshipLabel>
        <relationshipName>Extended_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Failed_Auto_Renew_Message__c</fullName>
        <label>Failed Auto Renew Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Failed_Auto_Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Failed Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finance_Review_Comments__c</fullName>
        <label>Finance Review Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Finance_Review_Completed__c</fullName>
        <label>Finance Review Completed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Finance_Review_Days_Count__c</fullName>
        <formula>IF(
(Finance_Review_End_Date__c - Finance_Review_Start_Date__c = 0),1,Finance_Review_End_Date__c - Finance_Review_Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance Review Days Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finance_Review_End_Date__c</fullName>
        <label>Finance Review End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finance_Review_Required__c</fullName>
        <inlineHelpText>Click on Finance Review Terms Button to check the details</inlineHelpText>
        <label>Finance Review Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Finance_Review_Start_Date__c</fullName>
        <label>Finance Review Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finance_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Reviewer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Finance</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>High_damages_cap_CounterParty_Damages__c</fullName>
        <label>High damages cap (CounterParty) Damages</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>High_damages_cap_IP_CounterParty__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Up to $250k</fullName>
                </value>
                <value>
                    <fullName>$250k - $500k</fullName>
                </value>
                <value>
                    <fullName>$501k - $1 million</fullName>
                </value>
                <value>
                    <fullName>$1-3 million</fullName>
                </value>
                <value>
                    <fullName>$3-5 million</fullName>
                </value>
                <value>
                    <fullName>over $5 million</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>High_damages_cap_IP_3rd_Party_Damages__c</fullName>
        <label>High damages cap IP (3rd Party) Damages</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>High_damages_cap_IP_3rd_Party__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Up to $250k</fullName>
                </value>
                <value>
                    <fullName>$250k - $500k</fullName>
                </value>
                <value>
                    <fullName>$501k - $1 million</fullName>
                </value>
                <value>
                    <fullName>$1-3 million</fullName>
                </value>
                <value>
                    <fullName>$3-5 million</fullName>
                </value>
                <value>
                    <fullName>over $5 million</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>High_damages_cap_IP_3rd_Party__c</fullName>
        <label>High damages cap IP (3rd Party)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>High_damages_cap_IP_CounterParty__c</fullName>
        <label>High damages cap IP (CounterParty)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>High_damages_cap_breach_Damages__c</fullName>
        <label>High damages cap – breach Damages</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>High_damages_cap_breach_of_warranties__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Up to $250k</fullName>
                </value>
                <value>
                    <fullName>$250k - $500k</fullName>
                </value>
                <value>
                    <fullName>$501k - $1 million</fullName>
                </value>
                <value>
                    <fullName>$1-3 million</fullName>
                </value>
                <value>
                    <fullName>$3-5 million</fullName>
                </value>
                <value>
                    <fullName>over $5 million</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>High_damages_cap_breach_confi_Damages__c</fullName>
        <label>High damages cap - breach confi Damages</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>High_damages_cap_breach_of_confi__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Up to $250k</fullName>
                </value>
                <value>
                    <fullName>$250k - $500k</fullName>
                </value>
                <value>
                    <fullName>$501k - $1 million</fullName>
                </value>
                <value>
                    <fullName>$1-3 million</fullName>
                </value>
                <value>
                    <fullName>$3-5 million</fullName>
                </value>
                <value>
                    <fullName>over $5 million</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>High_damages_cap_breach_of_PII_Damages__c</fullName>
        <label>High damages cap – breach of PII Damages</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>High_damages_cap_breach_of_PII__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Up to $250k</fullName>
                </value>
                <value>
                    <fullName>$250k - $500k</fullName>
                </value>
                <value>
                    <fullName>$501k - $1 million</fullName>
                </value>
                <value>
                    <fullName>$1-3 million</fullName>
                </value>
                <value>
                    <fullName>$3-5 million</fullName>
                </value>
                <value>
                    <fullName>over $5 million</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>High_damages_cap_breach_of_PII__c</fullName>
        <label>High damages cap – breach of PII</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>High_damages_cap_breach_of_confi__c</fullName>
        <label>High damages cap - breach of confi</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>High_damages_cap_breach_of_warranties__c</fullName>
        <label>High damages cap – breach of warranties</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>High_damages_cap_gross_neg_misc_law_vio__c</fullName>
        <label>High damages cap gross neg,misc,law vio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>High_damages_cap_info_sec_Damages__c</fullName>
        <label>High damages cap - info sec Damages</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>High_damages_cap_info_sec_measures__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Up to $250k</fullName>
                </value>
                <value>
                    <fullName>$250k - $500k</fullName>
                </value>
                <value>
                    <fullName>$501k - $1 million</fullName>
                </value>
                <value>
                    <fullName>$1-3 million</fullName>
                </value>
                <value>
                    <fullName>$3-5 million</fullName>
                </value>
                <value>
                    <fullName>over $5 million</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>High_damages_cap_info_sec_measures__c</fullName>
        <label>High damages cap - info sec measures</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>High_dmg_cap_gross_neg_misc_Damages__c</fullName>
        <label>High dmg cap gross neg,misc Damages</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>High_damages_cap_gross_neg_misc_law_vio__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Up to $250k</fullName>
                </value>
                <value>
                    <fullName>$250k - $500k</fullName>
                </value>
                <value>
                    <fullName>$501k - $1 million</fullName>
                </value>
                <value>
                    <fullName>$1-3 million</fullName>
                </value>
                <value>
                    <fullName>$3-5 million</fullName>
                </value>
                <value>
                    <fullName>over $5 million</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IP_Ownership_Retained__c</fullName>
        <label>IP Ownership Retained</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Silent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IP_Ownership__c</fullName>
        <label>IP Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard - Exclusive Cvent ownership of all services and software</fullName>
                </value>
                <value>
                    <fullName>Nonstandard - Assignment of deliverables and/or creation of works-for-hire</fullName>
                </value>
                <value>
                    <fullName>Nonstandard - Other IP provision not consistent with Cvent’s exclusive ownership of all services and software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>In_Approval_Process_Days_Count__c</fullName>
        <label>In Approval Process Days Count</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_Review_Days_Count__c</fullName>
        <label>In Review Days Count</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Indemnification_Notes__c</fullName>
        <label>Indemnification Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indemnification__c</fullName>
        <label>Indemnification</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Third party claims</fullName>
                </value>
                <value>
                    <fullName>Counter party claims</fullName>
                </value>
                <value>
                    <fullName>Mutual indemnity (in part)</fullName>
                </value>
                <value>
                    <fullName>Mutual indemnity (fully mutual)</fullName>
                </value>
                <value>
                    <fullName>No IP Indemnity by Counterparty</fullName>
                </value>
                <value>
                    <fullName>Intellectual Property (by Cvent)</fullName>
                </value>
                <value>
                    <fullName>Data Breach – PII</fullName>
                </value>
                <value>
                    <fullName>Data Breach – Customer Prop Info</fullName>
                </value>
                <value>
                    <fullName>Nonperformance - Info Sec Measures</fullName>
                </value>
                <value>
                    <fullName>Negligence</fullName>
                </value>
                <value>
                    <fullName>Gross Negligence</fullName>
                </value>
                <value>
                    <fullName>Intentional Misconduct</fullName>
                </value>
                <value>
                    <fullName>Acts and Omissions</fullName>
                </value>
                <value>
                    <fullName>Breach of Contract</fullName>
                </value>
                <value>
                    <fullName>Breach of Reps &amp; Warranties</fullName>
                </value>
                <value>
                    <fullName>Data Breach Fraudulent Cr. Card Charges</fullName>
                </value>
                <value>
                    <fullName>Data Breach-PCI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indemnifications_Score__c</fullName>
        <formula>IF(INCLUDES(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Indemnifications__c, "Other"),1*0.13, 
IF(INCLUDES(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Indemnifications__c, "No IP Indemnity by Counterparty"),2*0.13, 
IF(INCLUDES(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Indemnifications__c, "Data Breach"),2*0.13, 
IF(INCLUDES(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Indemnifications__c, "Injury to persons or property"),3*0.13, 
IF(INCLUDES(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Indemnifications__c, "IP Infringement"),4*0.13, 
IF(INCLUDES(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Indemnifications__c, "None"),4*0.13, 0))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indemnifications Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Indemnifications__c</fullName>
        <label>Indemnifications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No IP Indemnity by Counterparty</fullName>
                </value>
                <value>
                    <fullName>IP Infringement</fullName>
                </value>
                <value>
                    <fullName>Data Breach</fullName>
                </value>
                <value>
                    <fullName>Injury to persons or property</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Third party claims</fullName>
                    <isActive>false</isActive>
                    <label>Third party claims</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indirect_Damages_Carve_out__c</fullName>
        <label>Indirect Damages (Carve-out)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Carve-out Intentional misconduct, fraud</fullName>
                </value>
                <value>
                    <fullName>Carve-out Violation of law</fullName>
                </value>
                <value>
                    <fullName>Carve-out injury to persons or property</fullName>
                </value>
                <value>
                    <fullName>Carve-out Breach of Confid</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indirect_Damages__c</fullName>
        <label>Indirect Damages $</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirect_damages_for_some_Damages__c</fullName>
        <label>Indirect damages for some Damages</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Indirect_damages_for_some_or_all_claims__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Up to $250k</fullName>
                </value>
                <value>
                    <fullName>$250k - $500k</fullName>
                </value>
                <value>
                    <fullName>$501k - $1 million</fullName>
                </value>
                <value>
                    <fullName>$1-3 million</fullName>
                </value>
                <value>
                    <fullName>$3-5 million</fullName>
                </value>
                <value>
                    <fullName>over $5 million</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indirect_damages_for_some_or_all_claims__c</fullName>
        <label>Indirect damages for some or all claims</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Information_Security_Addendum__c</fullName>
        <label>Information Security</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Counterparty information security policies apply (no new action is required for Cvent compliance)</fullName>
                </value>
                <value>
                    <fullName>Counterparty information security policies apply (new action is required for Cvent compliance)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Information_Security__c</fullName>
        <label>Information Security</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Cvent</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Gets checked when the first renewal gets generated.</description>
        <inlineHelpText>Gets checked when the first renewal gets generated.</inlineHelpText>
        <label>Initial Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insert_Policy_Link__c</fullName>
        <label>Insert Policy Link</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance__c</fullName>
        <label>Insurance</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Additional Insured</fullName>
                </value>
                <value>
                    <fullName>Waiver of Subrogation</fullName>
                </value>
                <value>
                    <fullName>Other special requirements</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insurances__c</fullName>
        <label>Insurance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Additional Insured</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_there_an_information_security_review__c</fullName>
        <label>Data privacy or security addendum?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOL_Direct_Damage_Score__c</fullName>
        <formula>IF(ISPICKVAL(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Liability_of_Limatation_Direct_Damages__c,"1x ACV"),4*0.13,
IF(ISPICKVAL(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Liability_of_Limatation_Direct_Damages__c,"1x - 3x ACV"),3*0.13,
IF(ISPICKVAL(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Liability_of_Limatation_Direct_Damages__c,"3x - 5x ACV"),2*0.13,
IF(ISPICKVAL(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Liability_of_Limatation_Direct_Damages__c,"Unlimited"),1*0.13,
IF(ISPICKVAL(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Liability_of_Limatation_Direct_Damages__c,"&gt; 5x ACV"),1*0.13,1*0.13)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOL- Direct Damage Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOL_Indirect_Damage_Score__c</fullName>
        <formula>IF(ISPICKVAL(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Liability_of_Limitation_IndirectDamages__c,"1x ACV"),1*0.13,
IF(ISPICKVAL(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Liability_of_Limitation_IndirectDamages__c,"1x - 3x ACV"),1*0.13,
IF(ISPICKVAL(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Liability_of_Limitation_IndirectDamages__c,"3x - 5x ACV"),1*0.13,
IF(ISPICKVAL(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Liability_of_Limitation_IndirectDamages__c,"None"),4*0.13,
IF(ISPICKVAL(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Liability_of_Limitation_IndirectDamages__c,"&gt; 5x ACV"),1*0.13,1*0.13)))))</formula>
        <label>LOL- Indirect Damage Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Amended_Opportunity_Contracted__c</fullName>
        <label>Last Amended Opportunity Contracted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Contract_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Legacy Contract Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legal_Review_1st_Draft_Completed_Date__c</fullName>
        <label>Legal Review 1st Draft Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Review_Comments__c</fullName>
        <label>Legal Review Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Review_Completed__c</fullName>
        <label>Legal Review Completed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Review_Days_Count_New__c</fullName>
        <formula>Received_Days_Count__c
+
Assigned_Days_Count__c
+
Draft_Init_Res_Days_Count__c
+
Draft_Subs_Res_Days_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Review Days Count New</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_Review_Days_Count__c</fullName>
        <description>Old formula - IF(
(Legal_Review_End_Date__c - Legal_Review_Start_Date__c = 0),1,Legal_Review_End_Date__c - Legal_Review_Start_Date__c
)</description>
        <formula>Assigned_Days_Count__c +  Received_Days_Count__c +  In_Review_Days_Count__c +  Draft_Init_Res_Days_Count__c +  Draft_Subs_Res_Days_Count__c +  Nego_Opposing_Counsel_Days_Count__c +  Renegotiation_Days_Count__c +  Response_Rcvd_Counterparty_Days_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Review Days Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_Review_End_Date__c</fullName>
        <label>Legal Review End Date</label>
        <type>Date</type>
    </fields>
</CustomObject>